--- a/src/shared/ui/Modal/styles.module.css
+++ b/src/shared/ui/Modal/styles.module.css
@@ -11,7 +11,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .modal {
